--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       
       <div id="scroll-container" class="blocktext txt transition scale0">
-        <p id="textsec2" class="anm itim"><span class="garismerah">Heyy My Strong Girl,</span> semangat ngejalani<br>hari²nya yaa 💐, tetaplah menjadi dirimu sendiri, jangan terpengaruh dengan hal-hal buruk orang, jangan ikutin orang, jaga pergaulan, jangan terjerumus hal-hal yang tidak baik ya, tetaplah menjadi strong girl, jangan pernah menyerah, jangan pernah putus asa dan jangan lupa ada aku yang support kamu, dan sebisaku, semampuku, selalu bersamamu😋😉🌹<br><br><b class="putih merah">i always support you🔥 >></b><br><br><br>Edited by me, ig: @qihf4✨</b></p>
+        <p id="textsec2" class="anm itim"><span class="garismerah">Heyy My Strong Girl,</span> semangat ngejalani<br>hari²nya yaa 💐,<br>tetaplah menjadi dirimu sendiri,<br><br>jangan terpengaruh dengan hal-hal buruk orang,<br>jangan ikutin orang,<br>jaga pergaulan,<br>jangan terjerumus hal-hal yang tidak baik ya<br><br>tetaplah menjadi strong girl,<br><br>jangan pernah menyerah, jangan pernah putus asa <br>dan jangan lupa ada aku yang support kamu<br>dan sebisaku, semampuku, selalu bersamamu😋😉🌹<br><br><b class="putih merah">i always support you🔥 >></b><br><br><br>Edited by me, ig: @qihf4✨</b></p>
       </div>
   </section>
 
