--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-  <title>From me, ig: @qihf4 <3</title>
+  <title>From me, ig: @qihf4✨<3</title>
   <link rel="icon" type="image/svg+xml" href="https://feeldreams.github.io/main-icon.png">
   <meta name="description" content="Buka bentar yaa..">
   <meta name="keywords" content="From me, ig: @qihf4">
@@ -63,7 +63,7 @@
           <img src="https://feeldreams.github.io/g5.gif" />
         </div>
         <div id="scroll-container" class="blocktext">
-          <p id="teks2" class="itim" style="font-size:17px;margin-left:40px"><b class="garismerah">Heyy My Strong Girl,</span><br>semangat ngejalani<br>hari-harinya yaa🔥,<br>tetaplah menjadi dirimu sendiri,<br>jangan terpengaruh dengan hal-hal buruk orang<br><br>jangan ikutin orang, jaga pergaulan,<br>jangan terjerumus hal-hal yang tidak baik ya<br><br>tetaplah menjadi strong girl<br><br>jangan pernah menyerah<br>jangan pernah putus asa<br>dan jangan lupa ada aku yang support kamu<br>dan sebisaku, semampuku, selalu bersamamu🌹✨<br><br><b class="putih merah">i always support you🌹 >></b><br><br><br>Edited by me, ig: @qihf4😝</b></p>
+          <p id="teks2" class="itim" style="font-size:17px;margin-left:40px"><b class="garismerah">Heyy My Strong Girl, </b></span>semangat ngejalani<br>hari-harinya yaa🔥,<br>tetaplah menjadi dirimu sendiri,<br>jangan terpengaruh dengan hal-hal buruk orang<br><br>jangan ikutin orang, jaga pergaulan,<br>jangan terjerumus hal-hal yang tidak baik ya<br><br>tetaplah menjadi strong girl<br><br>jangan pernah menyerah<br>jangan pernah putus asa<br>dan jangan lupa ada aku yang support kamu<br>dan sebisaku, semampuku, selalu bersamamu🌹✨<br><br><b class="putih merah">i always support you🌹 >></b><br><br><br>Edited by me, ig: @qihf4😝</b></p>
         </div>
       </div>
 
